logo alignment fix on mobile - 1

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -1,14 +1,13 @@
 :root {
   /* Layout Colors */
-  --color-bg-footer: #F2FBFF;
   --color-bg-page: #f7f7f5;
-  --color-bg-footer: #f1f1ee;
-  --color-popover-button: #f2fbff;
+  --color-bg-footer: #F2FBFF;
+  --color-popover-button: #F2FBFF;
 
   /* Borders */
-  --border-header-bottom: 1px solid white;
+  --border-header-bottom: 1px solid #007a7a;
   --border-footer-top: 1px solid white;
-  --border-side: 1px solid gray;
+  --border-side: 1px solid white;
   --border-top-accent: 1px solid #E66414;
   --border-bottom-accent: 2px solid #E66414;
 
@@ -34,10 +33,11 @@
   --shadow-text-heading: 0.5px 0.5px 0.25px #5F9EA0;
   --shadow-box-top: 0 -4px 6px -4px rgba(0, 0, 0, 0.1);
   --shadow-box-bottom: 0 2px 6px -4px rgba(0, 0, 0, 0.1);
-  --shadow-box-sides: -4px 0 6px rgba(0, 0, 0, 0.06), 4px 0 6px rgba(0, 0, 0, 0.06);
+  --shadow-box-sides: -4px 0 4px rgba(0, 0, 0, 0.1), 4px 0 4px rgba(0, 0, 0, 0.1);
 
   /* Layout */
   --max-width: 1920px;
+  --max-width-minus-1: 1919px;
 }
 
 /* 🔒 Hide Streamlit UI Elements */
@@ -61,23 +61,7 @@ header {
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: auto;
-}
-
-.stVerticalBlock {
-  gap: 0px !important;
-}
-
-.st-key-logo_desktop  img, .st-key-logo_mobile  img,
-button[data-testid="stPopoverButton"], .st-key-login-out button {
-  background: rgba(247, 245, 245, 0.7) !important;
-  border-radius: 4px;
-  border:1px solid white;
-}
-
-.st-key-logo_mobile {
-  width: 200px;
-  max-width: 200px;
-  flex-shrink: 0;
+  box-shadow: var(--shadow-box-sides)
 }
 
 /* 📦 Navbar */
@@ -87,18 +71,36 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   top: 0;
   z-index: 100;
   padding: .5rem;
+  width: 100%;
+  max-width: var(--max-width-minus-1);
 
-  background-image: url("nav_image");
+  background-image:
+      linear-gradient(rgba(6, 136, 148, 0.5), rgba(6, 136, 148, 0.5)),  /* Midnight Blue overlay */
+      url("nav_image");
 
   background-position: center;
   border-top: var(--border-top-accent);
   border-bottom: var(--border-header-bottom);
-  border-left: var(--border-side);
-  border-right: var(--border-side);
   box-shadow: var(--shadow-box-bottom);
   text-shadow: var(--shadow-text-light);
   font-size: var(--font-size-md) !important;
 }
+
+.st-key-navbar-desktop-container button p {
+color:var(--color-bg-page);
+  font-size: var(--font-size-lg) !important;
+  text-shadow: 0.5px 0.5px 0.25px #315062 !important;
+}
+
+.st-key-login-out button p {
+    border: 1px solid white;
+    padding: 2px 10px;
+    border-radius: 4px;
+    background: rgba(247, 245, 245, 0.85) !important;
+    color: black !important;
+}
+
+
 
 .st-key-navbar-mobile-container {
   display: none;
@@ -107,12 +109,34 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   gap: 0;
 }
 
-.st-key-navbar-mobile-container .stVerticalBlock,
-.st-key-navbar-mobile-container .stColumn {
+.st-key-navbar-mobile-container ,
+.st-key-navbar-mobile-container  {
   gap: 0px !important;
   padding: 0px !important;
   margin: 0px !important;
 }
+
+.st-key-logo_desktop  img, .st-key-logo_mobile  img,
+button[data-testid="stPopoverButton"] {
+  background: rgba(247, 245, 245, 0.85) !important;
+  border-radius: 4px;
+  border:1px solid white;
+}
+
+.st-key-logo_mobile, .st-key-logo_mobile  img{
+  width: 150px;
+  max-width: 150px;
+  flex-shrink: 0;
+}
+
+button[data-testid="stPopoverButton"] {
+  width: 50px;
+  max-width: 50px;
+  flex-shrink: 1;
+}
+
+
+
 
 /* 📄 Body Container */
 .st-key-body-container {
@@ -125,10 +149,8 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   min-height: 70vh;
   /*color: var(--font-color-body); */
 
-  padding: 1rem;
+  padding: 0rem;
   margin: 4rem auto 1rem auto;
-  border-left: var(--border-side);
-  border-right: var(--border-side);
 }
 
 /* 📦 About Container */
@@ -136,7 +158,6 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   width: 100%;
   max-width: 1200px;
   overflow-y: auto;
-
   padding: 1rem;
   border: 1px solid white;
   border-radius: 4px;
@@ -150,12 +171,10 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   z-index: 100;
 
   width: 100%;
-  max-width: var(--max-width);
+  max-width: var(--max-width-minus-1);
   background-color: var(--color-bg-footer);
   border-top: var(--border-footer-top);
   border-bottom: var(--border-bottom-accent);
-  border-left: var(--border-side);
-  border-right: var(--border-side);
   box-shadow: var(--shadow-box-top);
   padding: 0.1rem 0 0 0;
   gap: 0;
@@ -178,16 +197,7 @@ button[data-testid="stPopoverButton"], .st-key-login-out button {
   font-size: var(--font-size-sm) !important;
 }
 
-/* 🖱️ Buttons */
-button[data-testid="stPopoverButton"] {
-  margin-top:2px;
-  margin-bottom:0;
-}
 
-button p {
-  font-size: var(--font-size-lg) !important;
-  text-shadow: var(--shadow-text-light) !important;
-}
 
 .st-key-button-active-desktop p,
 .st-key-button-active-mobile p {
